Revision history for Git-Helpers

{{$NEXT}}

0.000021  2021-02-08 22:59:26Z
    - Open correct URL for repositories with git URLs (GH#14) (Olaf Alders)

0.000020  2019-09-30 18:38:39Z
    - Remove dependency on say module (GH#12) (Olaf Alders)

0.000019  2019-09-25 16:31:33Z
    - Add --echo --version and --help to gh-open (GH#11) (Olaf Alders)

0.000018  2019-02-08 19:16:21Z
    - Add ignored_files() function (GH#10) (Olaf Alders)

0.000017  2018-12-18 21:55:01Z
    - https_remote_url() now returns earlier if it will fail. (GH#9) (Olaf Alders)

0.000016  2018-12-17 20:46:07Z
    - Add is_inside_work_tree() function. (GH#8) (Olaf Alders)

0.000015  2018-04-13 22:49:10Z
    - Use Term::Choose for a more intuitive UI

0.000014  2018-03-23 15:26:10Z
    - Fall back to config when get-url doesn't work (GH#7) (Olaf Alders)
    - Use #!perl shebang in scripts (GH#6) (Olaf Alders)

0.000013  2017-09-06 17:46:13Z
    - Really add delete-git-branches script

0.000012  2017-09-06 14:51:30Z
    - Add delete-git-branches script

0.000011  2017-05-31 10:11:30-04:00 America/Toronto
    - Capture STDERR in `checkout_root() (Chris Weyl)

0.000010  2017-04-27 13:55:03-04:00 America/Toronto
    - Adds cpan-repo script

0.000009  2017-01-12 16:28:17-05:00 America/Toronto
    - Fixes copy/paste typ on travis-open docs.

0.000008  2016-09-12 18:26:01-04:00 America/Toronto
    - Fix broken test.

0.000007  2016-09-09 17:33:58-04:00 America/Toronto
    - Adds current_branch_name() function
    - Adds gh-open -b arg, which opens the URL for your current branch (Kevin
      Phair)

0.000006  2016-08-12 00:02:57-04:00 America/Toronto
    - Adds URI::git to deps.
    - skip remote_url() tests if Git version less than 2.7

0.000005  2016-07-27 22:40:25-04:00 America/Toronto
    - Adds a remote_url() helper.
    - Adds a travis_url() helper.

0.000004  2016-04-11 21:57:50-04:00 America/Toronto
    - Replace has_git by test_requires_git (Philippe Bruhat (BooK))
