@@ -15,7 +15,6 @@ use Sub::Exporter -setup => {
         'ignored_files',
         'is_inside_work_tree',
         'remote_url',
-        'travis_url',
     ]
 };
 use Try::Tiny qw( catch try );
@@ -120,16 +119,6 @@ sub remote_url {
     return $url;
 }
 
-sub travis_url {
-    my $remote_url = https_remote_url(shift);
-    my $url        = URI->new($remote_url);
-    return uri(
-        scheme => 'https',
-        host   => 'travis-ci.org',
-        path   => $url->path,
-    );
-}
-
 1;
 
 #ABSTRACT: Shortcuts for common Git commands
@@ -144,7 +133,6 @@ sub travis_url {
         https_remote_url
         is_inside_work_tree
         remote_url
-        travis_url
     );
 
     my $dir              = '/path/to/folder/in/git/checkout';
@@ -153,7 +141,6 @@ sub travis_url {
     my $https_remote_url = https_remote_url();
     my $inside_work_tree = is_inside_work_tree();
     my $remote_url       = remote_url('upstream');
-    my $travis_url       = travis_url();
 
 =head2 checkout_root( $dir )
 
@@ -213,16 +200,3 @@ Provides you with the exact URL which git returns. Nothing is fixed up for you.
 
     # get URL for upstream remote
     my $upstream_url = remote_url('upstream');
-
-=head2 travis_url( $remote_name )
-
-Returns a L<travis-ci.org> URL for the remote you've requested by name.
-Defaults to 'origin'.
-
-    # get Travis URL for remote named "origin"
-    my $origin_travis_url = travis_url();
-
-    # get Travis URL for remote named "upstream"
-    my $upstream_travis_url = travis_url('upstream');
-
-=cut
